# rand

classify_service/: CMakeLists.txt  package.xml
classify_service/srv/: Classify.srv
team23_final/: package.xml  setup.cfg  setup.py
team23_final/data/classifier/: team23_classifier.pkl
team23_final/team23_final/: classifier_node.py  image_node.py  train_classifier.py  training_csv.py
